--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 :root {
     --primary-color: #734f96;
     --secondary-color: #e8e1ef;
-    --background-color: #FFDAB9;
+    --background-color: #100b16;
     --text-color: #fff;
     --hover-color: #E6E6FA;
     --border-color: rgba(255, 255, 255, 0.2);
