--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@
     --secondary-color: #e8e1ef;
     --background-color: #100b16;
     --text-color: #fff;
-    --hover-color: #E6E6FA;
+    --hover-color: #000000;
     --border-color: rgba(255, 255, 255, 0.2);
     -webkit-tap-highlight-color: transparent;
     -webkit-user-select: none; 
