--- a/src/style.css
+++ b/src/style.css
@@ -206,7 +206,7 @@ h1:hover {
     width: 110px;
     height: 110px;
     border-radius: 50%;
-    background: url('https://i.ibb.co/Hnvn01C/WH.webp') no-repeat center / cover;
+    background: url('https://envs.sh/FFh.jpg') no-repeat center / cover;
     margin-bottom: 2px;
     overflow: hidden;
     cursor: pointer;
